<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="125dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="125dp"
                android:layout_height="59dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permisos" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="321dp"
                    android:layout_height="51dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/instagram"
                    android:textAlignment="textStart" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="321dp"
                    android:layout_height="51dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/ubicacion"
                    android:textAlignment="textStart" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="321dp"
                    android:layout_height="51dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/almacen"
                    android:textAlignment="textStart" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="321dp"
                    android:layout_height="51dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/contactos"
                    android:textAlignment="textStart" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="321dp"
                    android:layout_height="51dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/camara"
                    android:textAlignment="textStart" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="321dp"
                    android:layout_height="51dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/microfono"
                    android:textAlignment="textStart" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="321dp"
                    android:layout_height="51dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/sms"
                    android:textAlignment="textStart" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="321dp"
                    android:layout_height="51dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/telefono"
                    android:textAlignment="textStart" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>